--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>This is Git Push</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, consequuntur. Odit nam quos doloribus enim eum aspernatur asperiores velit, ipsam error, nesciunt odio animi ratione quaerat sunt corporis vel sed.</p>
 </body>
 </html>
