--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h2>JavaScript Git Soluation</h2>
     
     <h3>JavaScript Pull</h3>
+    
+    <title>My Title is Here</title>
 
 </body>
 </html>
