--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h3>JavaScript Pull</h3>
     
     <title>My Title is Here</title>
+    <p>JavaScript is a object oriented languge.</p>
 
 </body>
 </html>
