--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, consequuntur. Odit nam quos doloribus enim eum aspernatur asperiores velit, ipsam error, nesciunt odio animi ratione quaerat sunt corporis vel sed.</p>
 
     <h2>JavaScript Git Soluation</h2>
-    
+
     <h3>JavaScript Pull</h3>
-    
+
     <title>My Title is Here</title>
     <p>JavaScript is a object oriented languge.</p>
+
+    <title>This is My 2nd Title</title>
 
 </body>
 </html>
